Version 2.02.52 -
=================================
  Add lots of missing stack debug messages to tools.
  Make readonly locking available as locking type 4.
  Fix readonly locking to permit writeable global locks (for vgscan). (2.02.49)
  Add manpage entry for dmsetup's udevcomplete_all and udevcookies commands.
  Add DM_UDEV_RULES_VSN udev enviroment variable.
  Check that udev is running and set internal state appropriately.
  Add libudev configuration check.
  Add lvm2app.sh to nightly tests conditional upon configure --enable-applib.
  Update lvm_vg_remove to require lvm_vg_write to commit remove to disk.
  Enforce an alphabetical lock ordering for vgname locks.
  Refactor vgsplit, vgmerge, and vgrename to obey vgname ordering rules.
  Implement write lock prioritisation for file locking and make it default.
  Fix clogd build direcory.
  Drop unrequired clogd Makefile.
  Fix clvmd autodetection check and cleanup related configure messages.
  Fix Makefile distclean target.
  Make clvmd check corosync to see what cluster interface it should use.
  Rewrite clvmd configuration code to cope with all combinations of libs.
  Fix global locking in PV reporting commands (2.02.49).
  Fix pvcreate string termination in duplicate uuid warning message.
  Fix pvcreate on a partition (2.02.51).
  Fix vgcfgrestore error paths when locking fails (2.02.49).
  Added configure --enable-cmirrord to build the cluster mirror log daemon.
  Make lvchange --refresh only take a read lock on volume group.
  Fix bug where non-blocking file locks could be granted in error.
  Make lvm2app pv_t, lv_t, vg_t handle definitions consistent with lvm_t.
  Fix vgextend error path - if ORPHAN lock fails, unlock / release vg (2.02.49).
  Fix compile warning in clvmd.
  Update lv{convert|create|extend|resize} man pages - clarify use of PE ranges.
  Remove useless _pv_write wrapper.
  Update test/api/test.c to call lvm_vg_create and lvm_vg_remove.

Version 2.02.51 - 6th August 2009