@@ -92,7 +92,7 @@ int vgcfgbackup(struct cmd_context *cmd, int argc, char **argv)
 
 	init_pvmove(1);
 
-	ret = process_each_vg(cmd, argc, argv, 0,
+	ret = process_each_vg(cmd, argc, argv, READ_ALLOW_INCONSISTENT,
 			      &last_filename, &vg_backup_single);
 
 	dm_free(last_filename);
